# llvm-pm

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/actions/install-llvm/: action.yml
.github/workflows/: ci.yml
examples/: all_pass_kinds.rs  dead_code_elimination.rs
llvm-pm/: Cargo.toml
llvm-pm-macros/: Cargo.toml
llvm-pm-macros/src/: lib.rs
llvm-pm-sys/: Cargo.toml  build.rs
llvm-pm-sys/cpp/: llvm_pm.cpp  llvm_pm.h
llvm-pm-sys/src/: lib.rs
llvm-pm/src/: lib.rs
llvm-pm/tests/: integration.rs
src/: lib.rs  llvm_plugin_harness.rs  plugin.rs  traits.rs
tests/: integration.rs  plugin_macro.rs
