[package]
name = "llvm-pm-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yasuo-ozu/llvm-pm"
description = "Raw FFI bindings for LLVM new PassManager C++ stubs"
readme = "../README.md"
keywords = ["llvm", "ffi", "pass-manager"]
categories = ["external-ffi-bindings"]
links = "llvm_pm"
rust-version = "1.71"

[features]
default = ["llvm18-0"]
no-llvm-linking = [
  "llvm-sys-100?/no-llvm-linking",
  "llvm-sys-110?/no-llvm-linking",
  "llvm-sys-120?/no-llvm-linking",
  "llvm-sys-130?/no-llvm-linking",
  "llvm-sys-140?/no-llvm-linking",
  "llvm-sys-150?/no-llvm-linking",
  "llvm-sys-160?/no-llvm-linking",
  "llvm-sys-170?/no-llvm-linking",
  "llvm-sys-180?/no-llvm-linking",
  "llvm-sys-191?/no-llvm-linking",
  "llvm-sys-201?/no-llvm-linking",
  "llvm-sys-211?/no-llvm-linking",
  "llvm-sys-221?/no-llvm-linking",
]
llvm10-0 = ["llvm-sys-100"]
llvm11-0 = ["llvm-sys-110"]
llvm12-0 = ["llvm-sys-120"]
llvm13-0 = ["llvm-sys-130"]
llvm14-0 = ["llvm-sys-140"]
llvm15-0 = ["llvm-sys-150"]
llvm16-0 = ["llvm-sys-160"]
llvm17-0 = ["llvm-sys-170"]
llvm18-0 = ["llvm-sys-180"]
llvm19-1 = ["llvm-sys-191"]
llvm20-1 = ["llvm-sys-201"]
llvm21-1 = ["llvm-sys-211"]
llvm22-1 = ["llvm-sys-221"]

[dependencies]
llvm-sys-100 = { package = "llvm-sys", version = "100", optional = true }
llvm-sys-110 = { package = "llvm-sys", version = "110", optional = true }
llvm-sys-120 = { package = "llvm-sys", version = "120", optional = true }
llvm-sys-130 = { package = "llvm-sys", version = "130", optional = true }
llvm-sys-140 = { package = "llvm-sys", version = "140", optional = true }
llvm-sys-150 = { package = "llvm-sys", version = "150", optional = true }
llvm-sys-160 = { package = "llvm-sys", version = "160", optional = true }
llvm-sys-170 = { package = "llvm-sys", version = "170", optional = true }
llvm-sys-180 = { package = "llvm-sys", version = "180", optional = true }
llvm-sys-191 = { package = "llvm-sys", version = "191", optional = true }
llvm-sys-201 = { package = "llvm-sys", version = "201", optional = true }
llvm-sys-211 = { package = "llvm-sys", version = "211", optional = true }
llvm-sys-221 = { package = "llvm-sys", version = "221", optional = true }

[build-dependencies]
cc = "1"
bindgen = { version = "=0.69.5", default-features = false, features = [
  "runtime",
] }
